...
                    onSearch = {},
                    active = isSearchActive,
                    onActiveChange = viewModel::onSearchActiveChange,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(horizontal = if (isSearchActive) 0.dp else 16.dp),
                    placeholder = { Text("Search notes") },
                    leadingIcon = {
                        Icon(
                            imageVector = Icons.Default.Search,
                            contentDescription = null
                        )
                    },
...
